--- a/src/wsdd/Makefile.wsdd
+++ b/src/wsdd/Makefile.wsdd
@@ -228,7 +228,7 @@ define build_gsoap
     # build
     if [ ! -f $(SOAPCPP2) ] || [ ! -f $(WSDL2H) ]; then \
          cd gsoap-2.8; \
-         ./configure --disable-c-locale && \
+         ./configure --disable-c-locale --disable-ssl && \
          make -j1; \
          cd ..;\
     fi
