--- a/src/busybox/.config
+++ b/src/busybox/.config
@@ -64,7 +64,7 @@ CONFIG_INSTALL_APPLET_SYMLINKS=y
 # CONFIG_INSTALL_SH_APPLET_SYMLINK is not set
 # CONFIG_INSTALL_SH_APPLET_HARDLINK is not set
 # CONFIG_INSTALL_SH_APPLET_SCRIPT_WRAPPER is not set
-CONFIG_PREFIX="../_install"
+CONFIG_PREFIX="../_install/home/yi-hack"
 
 #
 # Debugging Options
